update trilium notes version

--- a/charts/stable/trilium-notes/values.yaml
+++ b/charts/stable/trilium-notes/values.yaml
@@ -9,7 +9,7 @@ image:
   # -- image repository
   repository: zadam/trilium
   # -- image tag
-  tag: ""
+  tag:
   # -- image pull policy
   pullPolicy: IfNotPresent
 
