--- a/charts/stable/casper-node-exporter/Chart.yaml
+++ b/charts/stable/casper-node-exporter/Chart.yaml
@@ -21,3 +21,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Initial version
+    - kind: changed
+      description: Add service monitor
