--- a/charts/stable/casper-node-exporter/Chart.yaml
+++ b/charts/stable/casper-node-exporter/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: 1.0.0
 description: casper-node-exporter helm package
 name: casper-node-exporter
-version: 1.0.1
+version: 1.0.2
 kubeVersion: ">=1.16.0-0"
 keywords:
 - casper-node-exporter
@@ -23,3 +23,5 @@ annotations:
       description: Initial version
     - kind: changed
       description: Add service monitor
+    - kind: changed
+      description: Update service monitor
