--- a/charts/stable/casper-node-exporter/values.yaml
+++ b/charts/stable/casper-node-exporter/values.yaml
@@ -23,29 +23,16 @@ env:
 # @default -- See values.yaml
 service:
   main:
+    type: ClusterIP
     ports:
       http:
         port: 8111
 
-ingress:
-  # -- Enable and configure ingress settings for the chart under this key.
-  # @default -- See values.yaml
-  main:
-    enabled: false
-
-# -- Configure persistence settings for the chart under this key.
-# @default -- See values.yaml
-persistence: {}
-  # data:
-  #   enabled: false
-  #   mountPath: /data
-
 metrics:
-  # -- Enable and configure a Prometheus serviceMonitor for the chart under this key.
+  # -- Enable and configure prometheus-qbittorrent-exporter sidecar and Prometheus podMonitor.
   # @default -- See values.yaml
   enabled: false
   serviceMonitor:
-    # -- The interval field must use minutes for the padding to calculate properly.
-    interval: 1m
-    scrapeTimeout: 1m
+    interval: 15s
+    scrapeTimeout: 5s
     labels: {}
