--- a/charts/stable/casper-node-exporter/templates/servicemonitor.yaml
+++ b/charts/stable/casper-node-exporter/templates/servicemonitor.yaml
@@ -13,7 +13,7 @@ spec:
     matchLabels:
       {{- include "common.labels.selectorLabels" . | nindent 6 }}
   endpoints:
-    - port: main
+    - port: metrics
       {{- with .Values.metrics.serviceMonitor.interval }}
       interval: {{ . }}
       {{- end }}
