--- a/charts/stable/casper-node-exporter/values.yaml
+++ b/charts/stable/casper-node-exporter/values.yaml
@@ -23,9 +23,12 @@ env:
 # @default -- See values.yaml
 service:
   main:
-    type: ClusterIP
     ports:
       http:
+        enabled: false
+      metrics:
+        enabled: true
+        protocol: TCP
         port: 8111
 
 metrics:
