--- a/charts/stable/trilium-notes/Chart.yaml
+++ b/charts/stable/trilium-notes/Chart.yaml
@@ -21,3 +21,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Initial version
+    - kind: changed
+      description: Upgraded `zadam/trilium` image to version `0.50.3`.
