--- a/charts/stable/netmaker/templates/services.yaml
+++ b/charts/stable/netmaker/templates/services.yaml
@@ -39,12 +39,14 @@ metadata:
   name: '{{ include "netmaker.fullname" . }}-wireguard'
 spec:
   externalTrafficPolicy: Local
-  type: NodePort
+  type: {{ .Values.wireguard.serviceType }}
   ports:
   {{ $count := (add .Values.wireguard.networkLimit 1 | int) }}
   {{- range untilStep 1 $count 1 }}
   - port: {{ add 31820 . }}
+    {{- if eq .Values.wireguard.serviceType "NodePort" }}
     nodePort: {{ add 31820 . }}
+    {{- end }}
     protocol: UDP
     targetPort: {{ add 31820 . }}
     name: wg-iface-{{ add 31820 . }}
