--- a/.github/workflows/charts-test.yaml
+++ b/.github/workflows/charts-test.yaml
@@ -110,7 +110,8 @@ jobs:
       - name: Create k3d cluster
         uses: nolar/setup-k3d-k3s@v1
         with:
-          version: v1.20.15+k3s1
+          version: v1.19
+          k3d-tag: v4.1.0
 
       - name: Remove node taints
         run: |
