--- a/charts/stable/nocodb/Chart.yaml
+++ b/charts/stable/nocodb/Chart.yaml
@@ -19,5 +19,5 @@ dependencies:
   version: 4.5.2
 annotations:
   artifacthub.io/changes: |
-    - kind: added
-      description: Initial version
+    - kind: changed
+      description: Upgraded chart version to 0.1.1
