--- a/charts/stable/mattermost-team-edition/values.yaml
+++ b/charts/stable/mattermost-team-edition/values.yaml
@@ -93,6 +93,7 @@ externalDB:
   ## postgres:  "<USERNAME>:<PASSWORD>@<HOST>:5432/<DATABASE_NAME>?sslmode=disable&connect_timeout=10"
   ## mysql:     "<USERNAME>:<PASSWORD>@tcp(<HOST>:3306)/<DATABASE_NAME>?charset=utf8mb4,utf8&readTimeout=30s&writeTimeout=30s"
   externalConnectionString: ""
+  existingSecrets: ""
 
 mysql:
   enabled: true
