--- a/charts/stable/mattermost-team-edition/templates/deployment.yaml
+++ b/charts/stable/mattermost-team-edition/templates/deployment.yaml
@@ -66,7 +66,7 @@ spec:
         - name: MM_CONFIG
           valueFrom:
             secretKeyRef:
-              name: {{ .Values.externalDB.existingSecrets | default (include "mattermost-team-edition.fullname" .)-mattermost-dbsecret }}
+              name: {{ .Values.externalDB.existingSecrets | default (printf "%s-%s" (include "mattermost-team-edition.fullname" .) "mattermost-dbsecret") }}
               key: mattermost.dbsecret
         {{- if .Values.extraEnvVars }}
           {{- .Values.extraEnvVars | toYaml | nindent 8 }}
