Add mattermost helm

--- a/charts/stable/mattermost-team-edition/Chart.yaml
+++ b/charts/stable/mattermost-team-edition/Chart.yaml
@@ -25,3 +25,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Init
+    - kind: changed
+      description: Update
