--- a/charts/stable/mattermost-team-edition/Chart.yaml
+++ b/charts/stable/mattermost-team-edition/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 description: Mattermost Team Edition server.
 type: application
 name: mattermost-team-edition
-version: 6.6.18
+version: 6.6.19
 appVersion: 7.7.1
 keywords:
 - mattermost
@@ -25,3 +25,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Init
+    - kind: changed
+      description: Update
