--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -45,18 +45,18 @@ jobs:
         id: collect-changes
         uses: ./.github/actions/collect-changes
 
-      # - name: Generate README for changed charts
-      #   if: |
-      #     steps.collect-changes.outputs.changesDetected == 'true'
-      #   run: |
-      #     CHARTS=(${{ steps.collect-changes.outputs.addedOrModifiedCharts }})
-      #     for i in "${CHARTS[@]}"
-      #     do
-      #         IFS='/' read -r -a chart_parts <<< "$i"
-      #         if [ -f "charts/${chart_parts[0]}"/"${chart_parts[1]}/Chart.yaml" ]; then
-      #           ./.github/scripts/gen-helm-docs.sh "${chart_parts[0]}" "${chart_parts[1]}"
-      #         fi
-      #     done
+      - name: Generate README for changed charts
+        if: |
+          steps.collect-changes.outputs.changesDetected == 'true'
+        run: |
+          CHARTS=(${{ steps.collect-changes.outputs.addedOrModifiedCharts }})
+          for i in "${CHARTS[@]}"
+          do
+              IFS='/' read -r -a chart_parts <<< "$i"
+              if [ -f "charts/${chart_parts[0]}"/"${chart_parts[1]}/Chart.yaml" ]; then
+                ./.github/scripts/gen-helm-docs.sh "${chart_parts[0]}" "${chart_parts[1]}"
+              fi
+          done
 
       # - name: Create commit
       #   id: create-commit
@@ -68,14 +68,14 @@ jobs:
       #     commit_user_email: k8s-at-home[bot]@users.noreply.github.com
       #     commit_author: k8s-at-home[bot] <k8s-at-home[bot]@users.noreply.github.com>
 
-      # - name: Save commit hash
-      #   id: save-commit-hash
-      #   run: |
-      #     if [ "${{ steps.create-commit.outputs.changes_detected || 'unknown' }}" == "true" ]; then
-      #       echo '::set-output name=commit_hash::${{ steps.create-commit.outputs.commit_hash }}'
-      #     else
-      #       echo "::set-output name=commit_hash::${GITHUB_SHA}"
-      #     fi
+      - name: Save commit hash
+        id: save-commit-hash
+        run: |
+          if [ "${{ steps.create-commit.outputs.changes_detected || 'unknown' }}" == "true" ]; then
+            echo '::set-output name=commit_hash::${{ steps.create-commit.outputs.commit_hash }}'
+          else
+            echo "::set-output name=commit_hash::${GITHUB_SHA}"
+          fi
 
       - name: Checkout
         uses: actions/checkout@v3
