Upgrade trilium version

--- a/charts/stable/trilium-notes/Chart.yaml
+++ b/charts/stable/trilium-notes/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: 1.0.0
+appVersion: 1.0.1
 description: trilium-notes helm package
 name: trilium-notes
-version: 0.50.2
+version: 0.59.2
 kubeVersion: ">=1.16.0-0"
 keywords:
 - trilium-notes
@@ -19,10 +19,5 @@ dependencies:
   version: 4.3.0
 annotations:
   artifacthub.io/changes: |
-    - kind: added
-      description: Initial version
     - kind: changed
-      description: Upgraded `zadam/trilium` image to version `0.50.3`.
-    - kind: changed
-      description: Revert back version.
-
+      description: Upgrade version 0.59.2
