--- a/charts/stable/comabase/values.yaml
+++ b/charts/stable/comabase/values.yaml
@@ -5,6 +5,8 @@
 # https://github.com/k8s-at-home/library-charts/tree/main/charts/stable/common/values.yaml
 #
 
+hostNetwork: true
+
 image:
   # -- image repository
   repository: aitbase/comabase
