--- a/charts/stable/aitbase-admin/Chart.yaml
+++ b/charts/stable/aitbase-admin/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: 1.0.0
 description: Aitbase Admin helm package
 name: aitbase-admin
-version: 1.0.1
+version: 1.0.2
 kubeVersion: ">=1.16.0-0"
 keywords:
 - aitbase-admin
@@ -20,4 +20,4 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: Trigger
+      description: Change hostNetwork
