--- a/charts/stable/aitbase-admin/values.yaml
+++ b/charts/stable/aitbase-admin/values.yaml
@@ -5,7 +5,7 @@
 # https://github.com/k8s-at-home/library-charts/tree/main/charts/stable/common/values.yaml
 #
 
-hostNetwork: true
+hostNetwork: false
 
 image:
   # -- image repository
