--- a/charts/stable/mattermost-team-edition/Chart.yaml
+++ b/charts/stable/mattermost-team-edition/Chart.yaml
@@ -18,3 +18,7 @@ dependencies:
     version: 1.6.4
     repository: https://charts.helm.sh/stable
     condition: mysql.enabled
+annotations:
+  artifacthub.io/changes: |-
+    - kind: changed
+      description: Upgrade version mattermost
