--- a/charts/stable/mattermost-team-edition/Chart.yaml
+++ b/charts/stable/mattermost-team-edition/Chart.yaml
@@ -13,8 +13,15 @@ icon: http://www.mattermost.org/wp-content/uploads/2016/04/icon.png
 sources:
   - https://github.com/mattermost/mattermost-server
   - https://github.com/mattermost/mattermost-helm
+maintainers:
+  - name: imtoanle
+    email: toanledev@gmail.com
 dependencies:
   - name: mysql
     version: 1.6.4
     repository: https://charts.helm.sh/stable
     condition: mysql.enabled
+annotations:
+  artifacthub.io/changes: |-
+    - kind: changed
+      description: Upgrade version mattermost 9.1.0
